--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "sass": "^1.35.2",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11"
   }
 }
